# cuuid

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml
src/cuuid/: __init__.py  cuuid.pyi  cuuid.pyx
src/picoid/: __about__.py
