[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "picobuild"
]
build-backend = "setuptools.build_meta"

[project]
name = "cuuid"
description = "Low Level UUID Implementation for Python"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "ckirua", email = "aquipongoalgo.dsz@gmail.com" }]
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "setuptools>=80.9.0",
    "Cython",
    "picobuild",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "sphinx>=7.0.0", "sphinx-rtd-theme>=2.0.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "cuuid.__about__.__version__" }

[tool.cibuildwheel]
enable = ["cpython-freethreading"]
build = "cp313-* cp314-* cp313t-* cp314t-*"
build-frontend = "build[uv]"

# Install Arrow (arrow-devel) + libzip so the linker finds libarrow; setup.py adds system Arrow lib dirs via pkg-config.
# [tool.cibuildwheel.linux]
# before-build = """
#   ( command -v dnf >/dev/null && ( dnf install -y epel-release || true ) && dnf install -y https://packages.apache.org/artifactory/arrow/almalinux/8/apache-arrow-release-latest.rpm && dnf install -y arrow-devel libzip-devel ) ||
#   ( command -v yum >/dev/null && ( yum install -y epel-release || true ) && yum install -y https://packages.apache.org/artifactory/arrow/centos/7/apache-arrow-release-latest.rpm && yum install -y --enablerepo=epel arrow-devel libzip-devel ) ||
#   ( command -v apk >/dev/null && apk add --no-cache libzip-dev )
#   """